<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:fillViewport="true"
    tools:context=".fragment.SeriesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_series_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/series"
            style="@style/HeadingText"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_series_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/series_desc"
            style="@style/SubHeadingText"
            app:layout_constraintTop_toBottomOf="@id/tv_series_heading"

            />

        <EditText
            android:id="@+id/et_search_bar"
            android:labelFor="@id/et_search_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/search"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/primary_text"
            android:textColorHint="@color/secondary_text"
            android:textSize="14sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/tv_series_description"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            style="@style/SectionText"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/et_search_bar"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="@dimen/margin_after_heading"
            app:layout_constraintTop_toBottomOf="@+id/tv_category"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_on_air_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_air_series"
            style="@style/SectionText"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/rv_category"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_on_air_series"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginTop="@dimen/margin_after_heading"
            app:layout_constraintTop_toBottomOf="@+id/tv_on_air_series"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_trending_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trending_series"
            style="@style/SectionText"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/rv_on_air_series"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_trending_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_after_heading"
            app:layout_constraintTop_toBottomOf="@+id/tv_trending_series">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_top_rated_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top_rated_movies"
            style="@style/SectionText"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/rv_trending_series"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_top_rated_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_after_heading"
            app:layout_constraintTop_toBottomOf="@+id/tv_top_rated_series">

        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>