<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_movie_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_poster_movie"
            android:layout_width="108dp"
            android:layout_height="152dp"
            app:cardCornerRadius="4dp"
            android:layout_marginEnd="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_poster_movie"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@color/primary_color"
                android:scaleType="centerCrop"
                />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_poster_movie">

            <TextView
                android:id="@+id/tv_title_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                style="@style/HeadingText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_genre_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/movie_genre"
                style="@style/SubHeadingText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

            <TextView
                android:id="@+id/tv_duration_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/greeting"
                style="@style/SubHeadingText"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@+id/tv_genre_movie"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_movie" />

            <TextView
                android:id="@+id/tv_release_date_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_release_date"
                style="@style/SubHeadingText.Medium"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_movie"
                />

            <TextView
                android:id="@+id/tv_date_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_date"
                style="@style/SubHeadingText.Medium"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                app:layout_constraintStart_toEndOf="@+id/tv_release_date_movie"
                app:layout_constraintTop_toBottomOf="@id/tv_genre_movie"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/movie_overview"
                style="@style/BodyText"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date_movie"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ternary_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_movie_item"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout >

