<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary_color"
    android:paddingHorizontal="18dp"
    android:paddingTop="36dp"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/greeting"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@color/primary_text"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/primary_color"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tv_greeting"
            />

        <TextView
            android:id="@id/tv_home_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_desc"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@color/secondary_text"
            android:textSize="11sp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintTop_toBottomOf="@id/tv_user_name"

            />
        
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"

            app:layout_constraintTop_toBottomOf="@+id/tv_home_description"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>